--- a/lib/helpers/language/app_ar.arb
+++ b/lib/helpers/language/app_ar.arb
@@ -26,6 +26,7 @@
     "complete":"برجاء كتابة المعلومات الاتية",
     "qflight":"برجاء ادخال خط الطيران",
     "qcountry":"برجاء ادخال الدولة المتجه لها",
+    "qimage":"برجاء ارفاق صورة التحليل",
     "qpassport":"برجاء ارفاق صورة جواز السفر",
     "gallery":" من المعرض",
     "camera":"التقاط صورة",
@@ -81,8 +82,10 @@
     "sherton":"مساكن شيراتون",
     "fayoum":"الفيوم ",
     "alex":"اسكندرية",
-    "name":"الاسم",
-    "hintname":"برجاء ادخال الاسم",
+    "firstname":"الاسم الاول ",
+    "lastname":"الاسم الاخير",
+    "hintfirstname":"برجاء ادخال الاسم الاول",
+    "hintlastname":"برجاء ادخال الاسم الاخير ",
     "phoneNumber":"رقم المحمول",
     "hintNumber":"برجاء ادخال رقم المحمول",
     "email":"البريد الالكتروني ",
