--- a/lib/helpers/language/app_en.arb
+++ b/lib/helpers/language/app_en.arb
@@ -26,6 +26,7 @@
     "complete":"please compelete this information",
     "qflight":"please write your flight line",
     "qcountry":"please write your traveling country",
+    "qimage":"Please attach the analysis image",
     "qpassport":"Please attach the Passport info",
     "gallery":"from Gallery",
     "camera":"from Camera",
@@ -81,8 +82,10 @@
     "sherton":"sherton",
     "fayoum":"el fayoum",
     "alex":"Alex",
-    "name":"Name",
-    "hintname":"please write your name",
+    "firstname":"First Name",
+    "lastname":"Last Name",
+    "hintfirstname":"please write your First name",
+    "hintlastname":"please write your Last name",
     "phoneNumber":"Phone Number",
     "hintNumber":"please write your phone number",
     "email":"Email",
